# savequest-backend

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  errors.py  exception_handlers.py  middleware.py
app/core/database/: engine.py  session.py
app/shared/: responses.py
migrations/: env.py
migrations/versions/: 9b08cec69c7c_initialize_database.py
tests/integration/: conftest.py  test_application.py  test_error_handling.py  test_health.py
tests/integration/database/: test_database_connection.py
tests/unit/: test_main.py
tests/unit/core/: test_config.py  test_errors.py
tests/unit/core/database/: test_engine.py  test_session.py
