[project]
name = "savequest-backend"
version = "0.1.0"
description = "Backend da plataforma SaveQue$t."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic",
    "fastapi",
    "psycopg[binary]",
    "pydantic-settings",
    "sqlalchemy",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "C4",
    "ARG",
    "RUF",
]
ignore = [
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
pretty = true

plugins = []

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=85",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]